--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -6,6 +6,42 @@
     android:layout_height="match_parent"
     tools:context="com.example.samplewiki.activity.DetailPageActivity">
 
+    <RelativeLayout
+        android:id="@+id/activity_detail_page_toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipChildren="false">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_detail_page_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginBottom="@dimen/margin_3_dp"
+            android:background="@color/colorPrimary"
+            android:elevation="@dimen/elevation_4_dp">
+
+            <TextView
+                android:id="@+id/activity_detail_page_toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                android:layout_gravity="center"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:lines="1"
+                android:textColor="@color/White"
+                android:textSize="@dimen/text_size_16"
+                android:elevation="@dimen/elevation_5_dp" />
+        </android.support.v7.widget.Toolbar>
+    </RelativeLayout>
+
+    <WebView
+        android:id="@+id/activity_detail_page_webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/activity_detail_page_toolbar_layout"
+        android:layout_margin="@dimen/margin_8_dp"
+        android:scrollbars="vertical" />
+
     <ProgressBar
         android:id="@+id/activity_detail_page_progress_bar"
         style="?android:attr/progressBarStyle"
@@ -14,12 +50,5 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:visibility="gone" />
-
-    <WebView
-        android:id="@+id/activity_detail_page_webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/margin_8_dp"
-        android:scrollbars="vertical" />
 
 </RelativeLayout>
