--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,36 +7,19 @@
     android:padding="@dimen/padding_8_dp"
     tools:context="com.example.samplewiki.activity.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/activity_main_search_layout"
+    <AutoCompleteTextView
+        android:id="@+id/activity_main_search_at"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_50_dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:weightSum="100">
-
-        <EditText
-            android:id="@+id/activity_main_search_et"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="80"
-            android:hint="@string/search_text" />
-
-        <Button
-            android:id="@+id/activity_main_search_bt"
-            android:layout_width="@dimen/width_50_dp"
-            android:layout_height="@dimen/height_40_dp"
-            android:layout_weight="20"
-            android:gravity="center"
-            android:background="@android:drawable/ic_search_category_default" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8_dp"
+        android:textSize="@dimen/text_size_18"
+        android:hint="@string/search_text" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/activity_main_search_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/activity_main_search_layout"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/activity_main_search_at"
         android:layout_marginTop="@dimen/margin_8_dp"
         android:scrollbars="none" />
 
